2006-12-06  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_set_logo_mode):
	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_set_logo_mode):

	Send an Object Notify event when the logo mode changes

	* src/totem-menu.c: (totem_ui_manager_setup):
	* src/totem.c: (totem_action_zoom), (property_notify_cb),
	(totem_callback_connect), (video_widget_create):

	Disable the zoom menu entries when the logo mode is on
	(Closes: #355506)

2006-12-06  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/backend/bacon-video-widget-xine.c: (xine_try_error),
	(bacon_video_widget_button_press),
	(bacon_video_widget_get_metadata_string),
	(bacon_video_widget_get_current_frame):
	* src/totem.c: (on_video_button_press_event),
	(video_widget_create): Remove old < 2.9.1 glib compat code in the
	xine-lib backend, Make double-click toggle fullscreen, and a middle
	click play/pause (Closes: #162814)

2006-12-06  Bastien Nocera  <hadess@hadess.net>

	* configure.in: print out all the options enabled/disabled after the
	configure checks, re-add the "unused" D-Bus checks, they were
	used by the gnome-screensaver code, and broken since 2.17.2
	(Closes: #380675)

2006-12-06  Bastien Nocera  <hadess@hadess.net>

	* data/totem.schemas.in:
	* src/totem-playlist.c: (totem_playlist_add_files):
	* src/totem-uri.c: (totem_uri_get_subtitle_uri), (totem_add_files):
	* src/totem-uri.h:
	* src/totem.c: (totem_action_open_dialog),
	(totem_action_load_media_device), (totem_action_open),
	(totem_action_open_files_list):
	* src/totem.h: Remember the paths used in the Open dialogue and store
	them in GConf (Closes: #381432), Make _get_subtitle_uri faster
	by checking earlier if we support the scheme

2006-12-05  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_can_set_volume), (bacon_video_widget_new):
	Have _can_set_volume behave properly, don't fail creating the