@@ -1,5 +1,11 @@
 2006-12-06  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-options.c: hide the 2 session related options from
+	being printed in --help, they're for internal use only
+	* src/totem.c: (property_notify_cb): remove debug
+
+2006-12-06  Bastien Nocera  <hadess@hadess.net>
+
 	* src/backend/bacon-video-widget-gst-0.10.c:
 	(bacon_video_widget_set_logo_mode):
 	* src/backend/bacon-video-widget-xine.c:
